# usumurasaki

./: .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml  er-diagram.md
backend/: .env  .gitignore  Cargo.toml  er-diagram.md
backend/src/: lib.rs  main.rs  models.rs  repository.rs
backend/src/database/: connect.rs
backend/src/graphql/: query.rs
backend/src/models/: affiliate_item.rs  chennel.rs  errors.rs  importer.rs  partner.rs  user.rs  video.rs
backend/src/repository/: affiliate_item.rs  channel.rs  users.rs  video.rs
backend/w-config/: Cargo.toml
backend/w-config/src/: config.rs
backend/w-db/: Cargo.toml
backend/w-db/migrations/: 20230713144121_init.down.sql  20230713144121_init.sql
backend/w-db/src/: lib.rs
backend/w-db/src/repository/: affiliate_item.rs  channel.rs  users.rs  video.rs
backend/w-external-api/: Cargo.toml
backend/w-external-api/src/: amazon_product.rs  chat_gpt.rs  lib.rs
backend/w-external-api/src/amazon_product/: amazon_product.rs
backend/w-external-api/src/chat_gpt/: client.rs
backend/w-external-api/src/open_ai/: client.rs
backend/w-importer/: Cargo.toml
backend/w-importer/src/: lib.rs
backend/w-models/: Cargo.toml
backend/w-models/src/: models.rs
backend/w-server/: Cargo.toml
backend/w-server/src/: lib.rs  query.rs  server_context.rs
backend/w-usecase/: Cargo.toml
frontend/izee/: package-lock.json  package.json  rome.json  tsconfig.json
frontend/izee/src/: App.tsx  index.tsx
frontend/izee/src/components/: VideoIframe.tsx
migrations/: 20230713144121_init.sql  20230713144121_test.sql
nginx/conf.d/: default.conf
