[workspace]

members = [
    "w-config",
    "w-db",
    "w-external-api",
    "w-importer",
    "w-models",
    "w-server",
    "w-usecase",
]

# [dependencies]
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
# tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }
# reqwest = { version = "0.11", features = ["json"] }
# async-graphql = {version = "5.0.10", features = ["chrono"]}
# async-graphql-actix-web = "5.0.10"
# actix-web = "4"
# csv = "*"
# serde = "*"
# serde_json = "*"
# itertools = "*"
# error-stack = "0.3.1"
# anyhow = "*"
# thiserror  = "*"
# enum-kinds = "0.5.1"
# chrono = "0.4.26"
