[package]
name = "w-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
w-db = { path = "../w-db" }
w-models = { path = "../w-models" }
w-usecase = { path = "../w-usecase" }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }
serde = "*"
serde_json = "*"
itertools = "*"
csv = "*"
