[package]
name = "w-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "*"
async-graphql = { version = "5.0.10", features = ["chrono"] }
async-graphql-actix-web = "5.0.10"
chrono = "0.4.26"
itertools = "*"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
anyhow = "*"
thiserror = "*"
enum-kinds = "0.5.1"
csv = "*"
