[package]
name = "w-server"
version = "0.1.0"
edition = "2021"

[dependencies]
w-models = { path = "../w-models" }
w-db = { path = "../w-db" }
w-external-api = { path = "../w-external-api" }

# TODO delete sqlx
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
async-graphql = { version = "5.0.10", features = ["chrono"] }
async-graphql-actix-web = "5.0.10"
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
